syntax = "proto3";

package coteacher.v1;

import "coteacher/v1/resources.proto";

message CreateClassInvitationCodeRequest {
  string class_id = 1;
  string expiration_date = 2;
}

message CreateClassInvitationCodeResponse {
  ClassInvitationCode class_invitation_code = 1;
}

message GetClassInvitationCodeByIDRequest {
  string id = 1;
}

message GetClassInvitationCodeByIDResponse {
  ClassInvitationCode class_invitation_code = 1;
}

message GetClassInvitationCodeListByClassIDRequest {
  string class_id = 1;
}

message GetClassInvitationCodeListByClassIDResponse {
  repeated ClassInvitationCode class_invitation_code_list = 1;
}

message UpdateClassInvitationCodeRequest {
  string id = 1;
  string invitation_code = 3;
  string expiration_date = 4;
  bool is_active = 5;
}

message UpdateClassInvitationCodeResponse {
  ClassInvitationCode class_invitation_code = 1;
}

service ClassInvitationCodeService {
  rpc GetClassInvitationCodeByID(GetClassInvitationCodeByIDRequest) returns (GetClassInvitationCodeByIDResponse);
  rpc GetClassInvitationCodeListByClassID(GetClassInvitationCodeListByClassIDRequest) returns (GetClassInvitationCodeListByClassIDResponse);
  rpc CreateClassInvitationCode(CreateClassInvitationCodeRequest) returns (CreateClassInvitationCodeResponse);
  rpc UpdateClassInvitationCode(UpdateClassInvitationCodeRequest) returns (UpdateClassInvitationCodeResponse);
}