syntax = "proto3";

package coteacher.v1;

import "coteacher/v1/messages.proto";

service HealthcheckService {
  rpc Unary(UnaryRequest) returns (UnaryResponse);
  rpc ServerStreaming(ServerStreamingRequest)
      returns (stream ServerStreamingResponse);
  rpc ClientStreaming(stream ClientStreamingRequest)
      returns (ClientStreamingResponse);
  rpc BidirectionalStreaming(stream BidirectionalStreamingRequest)
      returns (stream BidirectionalStreamingResponse);
}

service ClassInvitationCodeService {
  rpc GetClassInvitationCodeByID(GetClassInvitationCodeByIDRequest) returns (GetClassInvitationCodeByIDResponse);
  rpc GetClassInvitationCodeListByClassID(GetClassInvitationCodeListByClassIDRequest) returns (GetClassInvitationCodeListByClassIDResponse);
  rpc CreateClassInvitationCode(CreateClassInvitationCodeRequest) returns (CreateClassInvitationCodeResponse);
  rpc UpdateClassInvitationCode(UpdateClassInvitationCodeRequest) returns (UpdateClassInvitationCodeResponse);
}

service ClassService {
  rpc GetClassByID(GetClassByIDRequest) returns (GetClassByIDResponse);
  rpc GetClassListByTeacherID(GetClassListByTeacherIDRequest) returns (GetClassListByTeacherIDResponse);
  rpc CreateClass(CreateClassRequest) returns (CreateClassResponse);
}

service StudentClassService {
  rpc GetStudentListByClassID(GetStudentListByClassIDRequest) returns (GetStudentListByClassIDResponse);
  rpc GetClassListByStudentID(GetClassListByStudentIDRequest) returns (GetClassListByStudentIDResponse);
  rpc CreateStudentClass(CreateStudentClassRequest) returns (CreateStudentClassResponse);
  rpc DeleteStudentClass(DeleteStudentClassRequest) returns (DeleteStudentClassResponse);
}

service UserService {
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}